--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>我是陳廷宇</strong>, a super simple<br />
-					responsive site template freebie<br />
+					<h1><strong>我是陳廷宇</strong>，即將上研究所<br />
+					一名玩弓箭的獵人<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
